tests/fixtures/invalid/errors/range_index_invalid.gcl
// Error: range index with start > end
index TimeStep = linspace(100.0 s, 0.0 s, step: 0.1 s);
